# pubgrub

./: .commitlintrc.yml  CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: cargo_publish_dry_run.yml  ci.yml  deploy_documentation.yml  main.yml  netlify.yml  permaref.yaml  pull-request.yml  push.yml
benches/: large_case.rs
examples/: branching_error_reporting.rs  caching_dependency_provider.rs  dhat_large_case.rs  doc_interface.rs  doc_interface_error.rs  doc_interface_semantic.rs  holes.rs  linear_error_reporting.rs  slow_135.rs  unsat_root_message_no_version.rs
examples/crates/: index.rs  main.rs
guide/: book.toml
guide/src/: SUMMARY.md  contributing.md  internals.md  pubgrub_crate.md  testing.md  version_solving.md
guide/src/internals/: conflict_resolution.md  incompatibilities.md  intro.md  overview.md  partial_solution.md  report_tree.md  terms.md
guide/src/pubgrub_crate/: caching.md  custom_dep_provider.md  custom_report.md  intro.md  offline_dep_provider.md  solution.md  strategy.md
guide/src/testing/: benchmarking.md  intro.md  property.md
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/pubgrub/version/: trait.Version.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
pubgrub/: all.html  index.html  sidebar-items.js
pubgrub/error/: enum.PubGrubError.html  index.html  sidebar-items.js
pubgrub/package/: index.html  sidebar-items.js  trait.Package.html
pubgrub/range/: index.html  sidebar-items.js  struct.Range.html
pubgrub/report/: enum.DerivationTree.html  enum.External.html  index.html  sidebar-items.js  struct.DefaultStringReportFormatter.html  struct.DefaultStringReporter.html  struct.Derived.html  trait.ReportFormatter.html  trait.Reporter.html
pubgrub/solver/: enum.Dependencies.html  fn.choose_package_with_fewest_versions.html  fn.resolve.html  index.html  sidebar-items.js  struct.OfflineDependencyProvider.html  trait.DependencyProvider.html  type.DependencyConstraints.html
pubgrub/term/: enum.Term.html  index.html  sidebar-items.js
pubgrub/type_aliases/: index.html  sidebar-items.js  type.DependencyConstraints.html  type.Map.html  type.SelectedDependencies.html  type.Set.html
pubgrub/version/: enum.VersionParseError.html  index.html  sidebar-items.js  struct.NumberVersion.html  struct.SemanticVersion.html  trait.Version.html
pubgrub/version_set/: index.html  sidebar-items.js  trait.VersionSet.html
src/: bounded_range.rs  cache.rs  discrete_range.rs  error.rs  error_bis.rs  lib.rs  package.rs  pubgrub.rs  range.rs  range_trait.rs  report.rs  report_bis.rs  solver.rs  solver_bis.rs  term.rs  term_bis.rs  type_aliases.rs  type_aliases_bis.rs  version.rs  version_set.rs  version_trait.rs
src/internal/: arena.rs  assignment.rs  core.rs  core_bis.rs  incompatibility.rs  incompatibility_bis.rs  memory.rs  mod.rs  partial_solution.rs  partial_solution_bis.rs  partial_solution_both.rs  small_map.rs  small_vec.rs  term.rs  types.rs
src/pubgrub/: error.rs.html  lib.rs.html  package.rs.html  range.rs.html  report.rs.html  solver.rs.html  term.rs.html  type_aliases.rs.html  version.rs.html  version_set.rs.html
src/pubgrub/internal/: arena.rs.html  assignment.rs.html  (+7 more)
test-examples/: large_case_1_u16_NumberVersion.ron  large_case_2_u16_NumberVersion.ron  large_case_u16_NumberVersion.ron  large_case_u16_bounded_NumberVersion.ron
tests/: examples.rs  proptest.proptest-regressions  proptest.rs  sat_dependency_provider.rs  tests.rs
version-range/: Cargo.toml
version-range/src/: lib.rs
version-ranges/: Cargo.toml
version-ranges/src/: lib.rs
(+27 files in other folders)
