[package]
name = "pubgrub"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>", "Alex Tokarev <aleksator@gmail.com>"]
edition = "2018"
description = "PubGrub version solving algorithm"
readme = "README.md"
repository = "https://github.com/mpizenberg/pubgrub-rs"
license = "MPL-2.0"
keywords = ["dependency", "pubgrub", "semver", "solver", "version"]
categories = ["algorithms"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "tests/**", "examples/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
twox-hash = "1.5.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "0.10.1"
ron="0.6"
