[package]
name = "version-range"
version = "0.1.0"
edition = "2021"
keywords = ["version", "pubgrub", "selector", "ranges"]

[dependencies]
proptest = { version = "1.5.0", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
smallvec = { version = "1.13.2" }

[features]
serde = ["dep:serde", "smallvec/serde"]

[dev-dependencies]
proptest = "1.5.0"
ron = "=0.9.0-alpha.0"
